2015-04-17  Karl Berry  <karl@tug.org>

	* contrib/PSTricks: remove this ancient copy of a PSTricks README.
	* special.lpro (/psfts, /startTexFig, /doclip, /endTexFig):
	remove these defns from (obsolete and nonfree) psfig.
	* testdata/special.pro: regenerate.
	* dvips.texi (Why Dvips): remove paragraph about psfig and
	other features that are no longer especially interesting.
	Report from Werner Fink, 14 Apr 2015 17:16:23.

2015-03-15  Karl Berry  <karl@tug.org>

	* configure.ac,
	* NEWS
	* dvips.c,
	* dvips.h,
	* afm2tfm.c,
	* dvips.texi: version 5.995 for TL'15.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t1part.c, t1part.h: Rename _HUGE => BORLAND_HUGE to avoid
	conflicting names.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* afm2tfm.c, dospecial.c, emspecial.c, resident.c, writet1.c:
	Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* {,squeeze/}Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-04-17  Karl Berry  <karl@tug.org>

	* version 5.994 for TL'14.

2014-01-27  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvips.c: Revise procedure of reading command line arguments.
	(Windows only)

2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvips.c, resident.c: Allow multibyte string with 0x5c
	in CP932-like system. (Windows only)
	* dvips.c, output.c, search.c: Allow Unicode file names.
	(Windows only)

2013-09-16  Karl Berry  <karl@tug.org>

	* writet1.c: formatting tweaks.

2013-08-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c (t1_subset_ascii_part): Remove UniqueID.
	Report from Christian Zietz (czietz/gmx/net),
	tex-k 01 Sep 2013 11:25:47 and previous.

2013-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c: Fix a bug in bbdopage() to obtain correct BoundingBox in
	vertical mode of pTeX.

2013-05-30  Karl Berry  <karl@tug.org>
	